Implement \int_rand:nn for large ranges without using floating points
Now \int_rand:nn always uses exactly two random numbers from the engine.

--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -199,6 +199,18 @@
 %   in package mode, where interfacing with the \LaTeXe{} kernel is necessary.
 % \end{function}
 %
+% \begin{function}[EXP]{\__kernel_int_add:nnn}
+%   \begin{syntax}
+%     \cs{__kernel_int_add:nnn} \Arg{integer_1} \Arg{integer_2} \Arg{integer_3}
+%   \end{syntax}
+%   Expands to the result of adding the three \meta{integers} (which
+%   must be suitable input for \cs{int_eval:w}), avoiding intermediate
+%   overflow.  Overflow occurs only if the overall result is outside
+%   $[-2^{31}+1,2^{31}-1]$.  The \meta{integers} may be of the form
+%   \cs{int_eval:w} \dots{} \cs{scan_stop:} but may be evaluated more
+%   than once.
+% \end{function}
+%
 % \begin{function}{\__kernel_ior_open:Nn, \__kernel_ior_open:No}
 %   \begin{syntax}
 %     \cs{__kernel_ior_open:Nn} \meta{stream} \Arg{file name}
@@ -429,19 +441,34 @@
 %   and variable mappings.
 % \end{variable}
 %
-% \begin{function}{\__kernel_randint:nn}
+% \begin{variable}{\c__kernel_randint_max_int}
+%   Maximal allowed argument to \cs{__kernel_randint:n}.  Equal to
+%   $2^{17}$.
+% \end{variable}
+%
+% \begin{function}{\__kernel_randint:n}
 %   \begin{syntax}
-%     \cs{__kernel_randint:nn} \Arg{min} \Arg{choices}
+%     \cs{__kernel_randint:n} \Arg{choices}
 %   \end{syntax}
 %   Used in an integer expression this gives a pseudo-random number
-%   between \meta{min} and $\meta{min} + \meta{choices} - 1$ included.
-%   One must have $\meta{choices}\leq 2^{17}$.
+%   between $0$ and $\meta{choices} - 1$ included.  One must have
+%   $\meta{choices}\leq 2^{17}$.  The \meta{choices} must be suitable
+%   for \cs{int_value:w} (and any \cs{int_eval:w} must be terminated by
+%   \cs{scan_stop:} or equivalent).
 % \end{function}
 %
-% \begin{variable}{\c__kernel_randint_max_int}
-%   Maximal allowed second argument to \cs{__kernel_randint:nn}.  Equal
-%   to $2^{17}$.
-% \end{variable}
+% \begin{function}{\__kernel_randint:nn}
+%   \begin{syntax}
+%     \cs{__kernel_randint:nn} \Arg{min} \Arg{max}
+%   \end{syntax}
+%   Used in an integer expression this gives a pseudo-random number
+%   between $\meta{min}$ and $\meta{max}$ included.  The \meta{min} and
+%   \meta{max} must be suitable for \cs{int_value:w} (and any
+%   \cs{int_eval:w} must be terminated by \cs{scan_stop:} or
+%   equivalent).  For small ranges
+%   $R=\meta{max}-\meta{min}+1\leq 2^{17}$,
+%   $\meta{min} + \cs{__kernel_randint:n} |{|R|}|$ is faster.
+% \end{function}
 %
 % \begin{function}{\__kernel_register_show:N, \__kernel_register_show:c}
 %   \begin{syntax}
