--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -188,11 +188,11 @@
 % $\operatorname{ediv}(p,q)$ the \eTeX{} rounding division giving
 % $\lfloor p/q+1/2\rfloor$.  Denote by $\meta{min}$, $\meta{max}$ and
 % $R=\meta{max}-\meta{min}+1$ the arguments of \cs{int_min:nn} and the
-% number of possible outcomes.  Note that $R\in [0,2^{32}-1]$ cannot
-% necessarily be represented as an integer.  Our strategy is to get two
-% $28$-bit integers $X$ and $Y$ from the RNG, split each into $14$-bit
-% integers, as $X=X_1\times 2^{14}+X_0$ and $Y=Y_1\times 2^{14}+Y_0$
-% then return essentially
+% number of possible outcomes.  Note that $R\in [1,2^{32}-1]$ cannot
+% necessarily be represented as an integer (however, $R-2^{31}$ can).
+% Our strategy is to get two $28$-bit integers $X$ and $Y$ from the RNG,
+% split each into $14$-bit integers, as $X=X_1\times 2^{14}+X_0$ and
+% $Y=Y_1\times 2^{14}+Y_0$ then return essentially
 % $\meta{min} + \lfloor R (X_1\times 2^{-14} + Y_1\times 2^{-28} +
 % Y_0\times 2^{-42} + X_0\times 2^{-56})\rfloor$.  For small~$R$ the
 % $X_0$ term has a tiny effect so we ignore it and we can compute
@@ -205,23 +205,43 @@
 %   ensures that the number obtained before the shift and division is at
 %   most $2^{17}(2^{14}-1)+(2^{17}-1)=\cs{c_max_int}$.  The
 %   non-uniformity is at most of order $2^{17}/2^{42} = 2^{-25}$.
-% \item Since it is not clear that the plan outlined in the following
-%   paragraph has good uniformity, we implement large ranges directly in
-%   terms of the floating point |randint|.
+% \item Split $R=R_2\times 2^{28}+R_1\times 2^{14}+R_0$, where
+%   $R_2\in [0,15]$.  Compute
+%   $\meta{min} + R_2 X_1 2^{14} + (R_2 Y_1 + R_1 X_1) +
+%   \operatorname{ediv}(R_2 Y_0 + R_1 Y_1 + R_0 X_1 +
+%   \operatorname{ediv}(R_2 X_0 + R_0 Y_1 + \operatorname{ediv}((2^{14}
+%   R_1 + R_0) (2^{14} Y_0 + X_0), 2^{28}), 2^{14}), 2^{14})$ then map a
+%   result of $\meta{max}+1$ to $\meta{min}$.  Writing each
+%   $\operatorname{ediv}$ in terms of truncated division with a shift,
+%   and using
+%   $\lfloor(p+\lfloor r/s\rfloor)/q\rfloor =
+%   \lfloor(ps+r)/(sq)\rfloor$, what we compute is equal to
+%   $\lfloor\meta{exact}+2^{-29}+2^{-15}+2^{-1}\rfloor$ with
+%   $\meta{exact}=\meta{min} + R \times 0.X_1Y_1Y_0X_0$.  Given we map
+%   $\meta{max}+1$ to $\meta{min}$, the shift has no effect on
+%   uniformity.  The non-uniformity is bounded by $2^{56}/R<2^{24}$.  It
+%   may be possible to speed up the code by dropping tiny terms such as
+%   $R_0 X_0$, but the analysis of non-uniformity proves too difficult.
 %
-%   Earlier plan: \enquote{Otherwise,
-%   split $R=R_2\times 2^{28}+R_1\times 2^{14}+R_0$,
-%   precompute $R_{21}=R_2\times 2^{14}+R_1$ and
-%   $R_{10}=R_1\times 2^{14}+R_0$ and $Z = X_1\times 2^{14}+Y_1$.  Then
-%   compute on the one hand
-%   $\meta{min}+8\times Z+(R_2-8)\times Z+R_1\times X_1$ (where the
-%   weird split of $R_2\times Z$ avoids a possible overflow) and
-%   $\operatorname{ediv}(R_2\times Y_0 + R_0\times X_1 +
-%   \operatorname{ediv}(R_{21}\times X_0,2^{28}) +
-%   \operatorname{ediv}(R_{10}\times Y,2^{28}),2^{14})$ then sum them
-%   (this may give $2^{31}$, an overflow).  If the result is greater
-%   than $\meta{max}$ (in particular if it overflows) then replace it by
-%   $\meta{min}$.}
+%   To avoid the overflow when the computation yields $\meta{max}+1$
+%   with $\meta{max}=2^{31}-1$ (note that $R$ is then arbitrary), we
+%   compute the result in two pieces.  Compute
+%   $\meta{first} = \meta{min} + R_2 X_1 2^{14}$ if $R_2<8$ or
+%   $\meta{min} + 8 X_1 2^{14} + (R_2-8) X_1 2^{14}$ if $R_2\geq 8$, the
+%   expressions being chosen to avoid overflow.  Compute
+%   $\meta{second} = R_2 Y_1 + R_1 X_1 + \operatorname{ediv}({\dots})$,
+%   at most
+%   $R_2 2^{14} + R_1 2^{14} + R_0\leq 2^{28} + 15\times 2^{14} - 1$,
+%   not at risk of overflowing.  We have
+%   $\meta{first}+\meta{second}=\meta{max}+1=\meta{min}+R$ if and only
+%   if $\meta{second} = R1 2^{14} + R_0 + R_2 2^{14}$ and
+%   $2^{14} R_2 X_1 = 2^{28} R_2 - 2^{14} R_2$ (namely $R_2=0$ or
+%   $X_1=2^{14}-1$).  In that case, return \meta{min}, otherwise return
+%   $\meta{first}+\meta{second}$, which is safe because it is at most
+%   \meta{max}.  Note that the decision of what to return does not need
+%   \meta{first} explicitly so we don't actually compute it, just put it
+%   in an integer expression in which \meta{second} is eventually added
+%   (or not).
 % \item To get a floating point number in $[0,1)$ just call the
 %   $R=10000\leq 2^{17}$ procedure above to produce four blocks of four
 %   digits.
@@ -240,17 +260,16 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[EXP]{\__kernel_randint:nn}
-%   Used in an integer expression, \cs{__kernel_randint:nn} \Arg{min}
-%   |{|$R$|}| gives a random number
+% \begin{macro}[EXP]{\__kernel_randint:n}
+%   Used in an integer expression, \cs{__kernel_randint:n} |{|$R$|}|
+%   gives a random number
 %   $\lfloor(R\operatorname{random}(2^{14}) +
-%   \operatorname{random}(R))/2^{14}\rfloor$.  that is between
-%   \meta{min} and $\meta{min}+R-1$ inclusive.
+%   \operatorname{random}(R))/2^{14}\rfloor$ that is in $[0,R-1]$.
 %    \begin{macrocode}
-    \cs_new:Npn \__kernel_randint:nn #1#2
+    \cs_new:Npn \__kernel_randint:n #1
       {
-        #1 + (#2 * \tex_uniformdeviate:D 1 6384
-              + \tex_uniformdeviate:D #2 - 8192 ) / 16384
+        (#1 * \tex_uniformdeviate:D 1 6384
+        + \tex_uniformdeviate:D #1 - 8192 ) / 16384
       }
 %    \end{macrocode}
 % \end{macro}
@@ -269,8 +288,8 @@
       {
         #1
         \exp_after:wN \@@_rand_myriads_get:w
-        \int_value:w \@@_int_eval:w
-          \__kernel_randint:nn { 10000 } { 10000 }
+        \int_value:w \@@_int_eval:w 10000 +
+          \__kernel_randint:n { 10000 }
         \@@_rand_myriads_loop:w
       }
     \cs_new:Npn \@@_rand_myriads_get:w 1 #1 ; { ; {#1} }
@@ -454,9 +473,9 @@
 %   bound~|#1| is more than the upper bound~|#2|.  Then determine
 %   whether the range is narrower than \cs{c__kernel_randint_max_int};
 %   |#2-#1| may overflow for very large positive~|#2| and negative~|#1|.
-%   If the range is wide, use slower code from \pkg{l3fp}.  If the range
-%   is narrow, call \cs{__kernel_randint:nn} |{#1}| \Arg{choices} where
-%   \meta{choices} is the number of possible outcomes.
+%   If the range is narrow, call \cs{__kernel_randint:n} \Arg{choices}
+%   where \meta{choices} is the number of possible outcomes.  If the
+%   range is wide, use somewhat slower code.
 %    \begin{macrocode}
     \cs_new:Npn \int_rand:nn #1#2
       {
@@ -482,12 +501,96 @@
               \fi:
               \c__kernel_randint_max_int
               \@@_int_eval_end:
-            \__kernel_randint:nn {#1}
+            #1 +
+            \__kernel_randint:n
               { \@@_int_eval:w #2 - #1 + 1 \@@_int_eval_end: }
           \else:
-            \fp_to_int:n { randint(#1,#2) }
+            \__kernel_randint:nn {#1} {#2}
           \fi:
         \fi:
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}
+%   {
+%     \__kernel_randint:nn, \@@_randint_split_o:Nw, \@@_randint_split_aux:w,
+%     \@@_randinat_wide_aux:w, \@@_randinat_wide_auxii:w,
+%   }
+%   Any $n\in[-2^{31}+1,2^{31}-1]$ is uniquely written as
+%   $2^{14}n_1+n_2$ with $n_1\in[-2^{17},2^{17}-1]$ and
+%   $n_2\in[0,2^{14}-1]$.  Calling \cs{@@_randint_split_o:Nw} $n$ |;|
+%   gives $n_1$|;| $n_2$|;| and expands the next token once.  We do this
+%   for two random numbers and apply \cs{@@_randint_split_o:Nw} twice to
+%   fully decompose the range~$R$.  One subtlety is that we compute
+%   $R-2^{31}=\meta{max}-\meta{min}-(2^{31}-1)\in[-2^{31}+1,2^{31}-1]$
+%   rather than $R$ to avoid overflow.
+%
+%   Then we have \cs{@@_randint_wide_aux:w} \meta{X_1}|;|\meta{X_0}|;|
+%   \meta{Y_1}|;|\meta{Y_0}|;| \meta{R_2}|;|\meta{R_1}|;|\meta{R_0}|;.|
+%   and we apply the algorithm described earlier.
+%    \begin{macrocode}
+    \cs_new:Npn \__kernel_randint:nn #1#2
+      {
+        #1
+        \exp_after:wN \@@_randint_wide_aux:w
+        \int_value:w
+          \exp_after:wN \@@_randint_split_o:Nw
+          \tex_uniformdeviate:D 268435456 ;
+        \int_value:w
+          \exp_after:wN \@@_randint_split_o:Nw
+          \tex_uniformdeviate:D 268435456 ;
+        \int_value:w
+          \exp_after:wN \@@_randint_split_o:Nw
+          \int_value:w \@@_int_eval:w 131072 +
+            \exp_after:wN \@@_randint_split_o:Nw
+            \int_value:w
+              \__kernel_int_add:nnn {#2} { -#1 } { -\c_max_int } ;
+        .
+      }
+    \cs_new:Npn \@@_randint_split_o:Nw #1#2 ;
+      {
+        \if_meaning:w 0 #1
+          0 \exp_after:wN ; \int_value:w 0
+        \else:
+          \exp_after:wN \@@_randint_split_aux:w
+          \int_value:w \@@_int_eval:w (#1#2 - 8192) / 16384 ;
+          + #1#2
+        \fi:
+        \exp_after:wN ;
+      }
+    \cs_new:Npn \@@_randint_split_aux:w #1 ;
+      {
+        #1 \exp_after:wN ;
+        \int_value:w \@@_int_eval:w - #1 * 16384
+      }
+    \cs_new:Npn \@@_randint_wide_aux:w #1;#2; #3;#4; #5;#6;#7; .
+      {
+        \exp_after:wN \@@_randint_wide_auxii:w
+        \int_value:w \@@_int_eval:w #5 * #3 + #6 * #1 +
+          (#5 * #4 + #6 * #3 + #7 * #1 +
+           (#5 * #2 +           #7 * #3 +
+            (16384 * #6 + #7) * (16384 * #4 + #2) / 268435456) / 16384
+          ) / 16384 \exp_after:wN ;
+        \int_value:w \@@_int_eval:w (#5 + #6) * 16384 + #7 ;
+        #1 ; #5 ;
+      }
+    \cs_new:Npn \@@_randint_wide_auxii:w #1; #2; #3; #4;
+      {
+        \if_int_odd:w 0
+            \if_int_compare:w #1 = #2 \else: \exp_stop_f: \fi:
+            \if_int_compare:w #4 = \c_zero 1 \fi:
+            \if_int_compare:w #3 = 16383 ~ 1 \fi:
+            \exp_stop_f:
+          \exp_after:wN \prg_break:
+        \fi:
+        \if_int_compare:w #4 < 8 \exp_stop_f:
+          + #4 * #3 * 16384
+        \else:
+          + 8 * #3 * 16384 + (#4 - 8) * #3 * 16384
+        \fi:
+        + #1
+        \prg_break_point:
       }
 %    \end{macrocode}
 % \end{macro}
@@ -508,9 +611,9 @@
           \@@_randint:ww #1; 1;
         \else:
           \if_int_compare:w #1 > \c__kernel_randint_max_int
-            \fp_to_int:n { randint(#1) }
+            \__kernel_randint:nn { 1 } {#1}
           \else:
-            \__kernel_randint:nn {1} {#1}
+            1 + \__kernel_randint:n {#1}
           \fi:
         \fi:
       }
