--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1178,6 +1178,27 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\__kernel_int_add:nnn}
+%   Equivalent to \cs{int_eval:n} |{#1+#2+#3}| except that overflow only
+%   occurs if the final result overflows $[-2^{31}+1,2^{31}-1]$.  The
+%   idea is to choose the order in which the three numbers are added
+%   together.  If |#1| and |#2| have opposite signs (one is in
+%   $[-2^{31}+1,-1]$ and the other in $[0,2^{31}-1]$) then |#1+#2|
+%   cannot overflow so we compute the result as |#1+#2+#3|.  If they
+%   have the same sign, then either |#3| has the same sign and the order
+%   does not matter, or |#3| has the opposite sign and any order in
+%   which |#3| is not last will work.  We use |#1+#3+#2|.
+%    \begin{macrocode}
+\cs_new:Npn \__kernel_int_add:nnn #1#2#3
+  {
+    \int_value:w \@@_eval:w #1
+      \if_int_compare:w #2 < \c_zero \exp_after:wN \reverse_if:N \fi:
+      \if_int_compare:w #1 < \c_zero + #2 + #3 \else: + #3 + #2 \fi:
+    \@@_eval_end:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Creating and initialising integers}
 %
 % \begin{macro}{\int_new:N, \int_new:c}
