Mention a third mild issue with the engine's RNG [ci skip]

--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -131,7 +131,7 @@
 % increased.  In our code, we shall thus combine several results from
 % the RNG\@.
 %
-% The RNG has two types of unexpected correlations.  First, everything
+% The RNG has three types of unexpected correlations.  First, everything
 % is linear modulo~$2^{28}$, hence the lowest $k$ bits of the random
 % numbers only depend on the lowest $k$ bits of the seed (and of course
 % the number of times the RNG was called since setting the seed).  The
@@ -160,6 +160,13 @@
 % one hand and between the $x_{2n+1}$ on the other hand.  Such relations
 % will have more complicated coefficients than $\pm 1$, which alleviates
 % the issue.
+%
+% Third, consider successive batches of $165$ calls to the RNG (with
+% argument $2^{28}$ or with argument~$2$ for instance), then most
+% batches have more odd than even numbers.  Note that this does not mean
+% that there are more odd than even numbers overall.  Similar issues are
+% discussed in Knuth's TAOCP volume 2 near exercise 3.3.2-31.  We do not
+% have any mitigation strategy for this.
 %
 % Ideally, our algorithm should be:
 % \begin{itemize}
