Fix bug in \__kernel_randint:n (hence in \int_rand:nn)

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -461,10 +461,11 @@
 %   avoid a spurious \enquote{at position \texttt{\#1}} part in the
 %   error message.  Then calculate the number of choices: this is at
 %   most $(2^{30}-1)-(-(2^{30}-1))+1=2^{31}-1$, which just barely does
-%   not overflow.  For small ranges use \cs{__kernel_randint:n},
-%   otherwise \cs{__kernel_randint:nn}.
-%   Finally, if there are no random numbers do not define any of the
-%   auxiliaries.
+%   not overflow.  For small ranges use \cs{__kernel_randint:n} (making
+%   sure to subtract~$1$ \emph{before} adding the random number to the
+%   \meta{min}, to avoid overflow when \meta{min} or \meta{max} are
+%   $\pm\cs{c_max_int}$), otherwise \cs{__kernel_randint:nn}.  Finally,
+%   if there are no random numbers do not define any of the auxiliaries.
 %    \begin{macrocode}
 \cs_new_protected:Npn \intarray_gset_rand:Nn #1
   { \intarray_gset_rand:Nnn #1 { 1 } }
@@ -510,7 +511,7 @@
               }
               {
                 \exp_stop_f:
-                \int_eval:n { #3 + \__kernel_randint:n {#2} }
+                \int_eval:n { \__kernel_randint:n {#2} - 1 + #3 }
               }
           }
       }
