One renamed primitive missed

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2125,7 +2125,7 @@
 %   using \cs{file_get_full_name:nN} and so are non-expandable \texttt{get}
 %   functions. Much of the code is repetitive but we need to branch for
 %   \LuaTeX{} (emulation in Lua), for the slightly different syntax
-%   needed for \tn{pdftex_mdfivesum:D} and for the fact that primitive
+%   needed for \tn{tex_mdfivesum:D} and for the fact that primitive
 %   coverage varies in other engines.
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_get_mdfive_hash:nN #1#2
@@ -2139,7 +2139,7 @@
     \file_get_full_name:nN {#1} \l_@@_full_name_str
     \str_set:Nx #3
       {
-        \use:c { pdftex_file #2 :D } \exp_after:wN
+        \use:c { tex_file #2 :D } \exp_after:wN
           { \l_@@_full_name_str }
       }
   }
