Correct timing information in a piece of code documentation

--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -131,7 +131,7 @@
 % non-uniformity from taking directly $N=3$).  This is detectable after
 % about $2^{56}/2^{2k} = 9\cdot 2^{56}/N^2$ random numbers. For $k=15$,
 % $N=98304$, this means roughly $2^{26}$ calls to the RNG
-% (experimentally this takes about 4 seconds on a 2 giga-hertz
+% (experimentally this takes at the very least 16 seconds on a 2 giga-hertz
 % processor). While this bias is not quite problematic, it is
 % uncomfortably close to being so, and it becomes worse as $N$ is
 % increased.  In our code, we shall thus combine several results from
