Another renamed primitive that was missed

--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1125,7 +1125,7 @@
   {
     \int_eval:n
       {
-        \cs_if_exist_use:cF { pdftex_#1code:D }
+        \cs_if_exist_use:cF { tex_#1code:D }
           { \cs_if_exist_use:cF { #1 code } { 0 \use_none:nn } }
         \tex_font:D \l__char_code_int
       }
