Deprecate named integer constants \c_zero etc, define \c_zero_int

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1332,8 +1332,8 @@
 %
 % \subsection{Defining some constants}
 %
-% \begin{variable}{\c_zero}
-%   We need the constant \cs{c_zero}
+% \begin{variable}{\c_zero_int}
+%   We need the constant \cs{c_zero_int}
 %   which is used by some functions in the \textsf{l3alloc} module. The
 %   rest are defined in the \textsf{l3int} module -- at least for the
 %   ones that can be defined with \cs{tex_chardef:D} or
@@ -1341,7 +1341,7 @@
 %   required but it can't be used until the allocation has been set
 %   up properly!
 %    \begin{macrocode}
-\tex_chardef:D \c_zero    = 0 ~
+\tex_chardef:D \c_zero_int    = 0 ~
 %    \end{macrocode}
 % \end{variable}
 %
@@ -2591,10 +2591,10 @@
 %   \verb*|\token_to_str:N \ |, and the auxiliary \cs{@@_to_str:w}
 %   is expanded, feeding |-| as a second character for the test;
 %   the test is false, and \TeX{} skips to \cs{fi:}, then performs
-%   \cs{token_to_str:N}, and stops the \cs{tex_romannumeral:D} with \cs{c_zero}.
+%   \cs{token_to_str:N}, and stops the \cs{tex_romannumeral:D} with \cs{c_zero_int}.
 %   The last case is that the escape character is itself a space. In this
 %   case, the \cs{if:w} test is true, and the auxiliary \cs{@@_to_str:w}
-%   comes into play, inserting |-\int_value:w|, which expands \cs{c_zero}
+%   comes into play, inserting |-\int_value:w|, which expands \cs{c_zero_int}
 %   to the character |0|. The initial \cs{tex_romannumeral:D} then sees
 %   |0|, which is not a terminated number, followed by the escape character,
 %   a space, which is removed, terminating the expansion of
@@ -2606,18 +2606,18 @@
   {
 %    \end{macrocode}
 %    We implement the expansion scheme using \cs{tex_romannumeral:D}
-%    terminating it with \cs{c_zero} rather than using \cs{exp:w} and
+%    terminating it with \cs{c_zero_int} rather than using \cs{exp:w} and
 %    \cs{exp_end:} as we normally do. The reason is that the code
-%    heavily depends on terminating the expansion with \cs{c_zero} so
+%    heavily depends on terminating the expansion with \cs{c_zero_int} so
 %    we make this dependency explicit.
 %    \begin{macrocode}
     \tex_romannumeral:D
       \if:w \token_to_str:N \ \@@_to_str:w \fi:
       \exp_after:wN \@@_to_str:N \token_to_str:N
   }
-\cs_set:Npn \@@_to_str:N #1 { \c_zero }
+\cs_set:Npn \@@_to_str:N #1 { \c_zero_int }
 \cs_set:Npn \@@_to_str:w #1 \@@_to_str:N
-  { - \int_value:w \fi: \exp_after:wN \c_zero }
+  { - \int_value:w \fi: \exp_after:wN \c_zero_int }
 %    \end{macrocode}
 %   If speed is a concern we could use \tn{csstring} in \LuaTeX{}.  For
 %   the empty csname that primitive gives an empty result while the
