--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -496,14 +496,14 @@
 %   \item If the next token is a control sequence, it could be the
 %     special marker \cs{s_@@_mark}, and
 %     otherwise it is a case of juxtaposing numbers, such as
-%     |2\c_zero|, with an implied multiplication.
+%     |2\c_zero_int|, with an implied multiplication.
 %   \item If the next token is a letter, it is also a case of
 %     juxtaposition, as letters cannot be proper infix operators.
 %   \item Otherwise (including in the case of digits), if the token is a
 %     known infix operator, the appropriate
 %     |\__fp_infix_|\meta{operator}|:N| function is built, and if it
 %     does not exist, we complain.  In particular, the juxtaposition
-%     |\c_zero 2| is disallowed.
+%     |\c_zero_int 2| is disallowed.
 % \end{itemize}
 %
 % In the above, we need to test whether a character token~|#1| is a
