--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1394,7 +1394,7 @@
   { #1 \prg_return_false: \else: \prg_return_true: \fi: }
 \cs_new_protected:Npn \@@_compare_error:
   {
-    \if_int_compare:w \c_zero \c_zero \fi:
+    \if_int_compare:w \c_zero_int \c_zero_int \fi:
     =
     \@@_compare_error:
   }
