--- a/l3leftovers/l3toks.dtx
+++ b/l3leftovers/l3toks.dtx
@@ -92,7 +92,7 @@
 %    Allocates a new token register.
 %    \begin{macrocode}
 %<*initex>
-\__alloc_new:nnnN {toks} \c_zero \c_max_register_int \tex_toksdef:D
+\__alloc_new:nnnN {toks} \c_zero_int \c_max_register_int \tex_toksdef:D
 %</initex>
 %    \end{macrocode}
 %
