--- a/l3packages/l3doc/examples/testing.dtx
+++ b/l3packages/l3doc/examples/testing.dtx
@@ -907,26 +907,12 @@
 %
 % \begin{macro}
 %   {
-%     \c_zero,
-%     \c_one,
-%     \c_two,
-%     \c_three,
-%     \c_four,
-%     \c_five,
-%     \c_six,
-%     \c_seven,
-%     \c_eight,
-%     \c_nine,
-%     \c_ten,
-%     \c_eleven,
-%     \c_sixteen,
-%     \c_thirty_two,
-%     \c_hundred_one,
-%     \c_two_hundred_fifty_five,
-%     \c_two_hundred_fifty_six,
-%     \c_thousand,
-%     \c_ten_thousand,
-%     \c_ten_thousand_one
+%     \c_zero_int,
+%     \c_one_int,
+%     \c_zero_dim,
+%     \c_zero_skip,
+%     \c_zero_muskip,
+%     \c_zero_fp,
 %   }
 %   \begin{arguments}
 %     \item name
