--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -285,7 +285,7 @@
 %  This is now provided from \pkg{l3expan}.
 %    \begin{macrocode}
 %\cs_new_eq:NN \@@_exp:w \tex_romannumeral:D
-%\cs_new_eq:NN \@@_exp_stop: \c_zero
+%\cs_new_eq:NN \@@_exp_stop: \c_zero_int
 %    \end{macrocode}
 % \end{macro}
 %
