--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -346,9 +346,9 @@
       \if:w \token_to_str:N \ \@@_strip_escape_aux:w \fi:
       \@@_strip_escape_aux:N
   }
-\cs_new:Npn \@@_strip_escape_aux:N #1 { \c_zero }
+\cs_new:Npn \@@_strip_escape_aux:N #1 { \c_zero_int }
 \cs_new:Npn \@@_strip_escape_aux:w #1#2
-  { - \int_value:w #1 \c_zero }
+  { - \int_value:w #1 \c_zero_int }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -971,10 +971,10 @@
       \cs_set_protected:Npn \@@_tmp:w ##1
         { \group_end: #1 }
       \tex_afterassignment:D \@@_do_general_text_aux:
-      \tex_toks:D \c_zero
+      \tex_toks:D \c_zero_int
   }
 \cs_new_protected:Npn \@@_do_general_text_aux:
-  { \exp_args:No \@@_tmp:w { \tex_the:D \tex_toks:D \c_zero } }
+  { \exp_args:No \@@_tmp:w { \tex_the:D \tex_toks:D \c_zero_int } }
 %    \end{macrocode}
 % \end{macro}
 %
