--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -232,7 +232,7 @@
 %   $\lfloor\meta{exact}+2^{-29}+2^{-15}+2^{-1}\rfloor$ with
 %   $\meta{exact}=\meta{min} + R \times 0.X_1Y_1Y_0X_0$.  Given we map
 %   $\meta{max}+1$ to $\meta{min}$, the shift has no effect on
-%   uniformity.  The non-uniformity is bounded by $2^{56}/R<2^{24}$.  It
+%   uniformity.  The non-uniformity is bounded by $R/2^{56}<2^{-24}$.  It
 %   may be possible to speed up the code by dropping tiny terms such as
 %   $R_0 X_0$, but the analysis of non-uniformity proves too difficult.
 %
