--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -862,15 +862,24 @@
 % \begin{macro}{\bool_set:Nn, \bool_set:cn}
 % \begin{macro}{\bool_gset:Nn, \bool_gset:cn}
 %   This function evaluates a boolean expression and assigns the first
-%   argument the meaning \cs{c_true_bool} or \cs{c_false_bool}.
-%   Again, we include some checking code.
+%   argument the meaning \cs{c_true_bool} or \cs{c_false_bool}.  Again,
+%   we include some checking code.  It is important to evaluate the
+%   expression before applying the \tn{chardef} primitive, because that
+%   primitive sets the left-hand side to \cs{scan_stop:} before looking
+%   for the right-hand side.
 %    \begin{macrocode}
 \__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \bool_set:Nn #1#2
-  { \tex_chardef:D #1 = \bool_if_p:n {#2} }
+  {
+    \exp_last_unbraced:NNNf
+      \tex_chardef:D #1 = { \bool_if_p:n {#2} }
+  }
 \__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \bool_gset:Nn #1#2
-  { \tex_global:D \tex_chardef:D #1 = \bool_if_p:n {#2} }
+  {
+    \exp_last_unbraced:NNNNf
+      \tex_global:D \tex_chardef:D #1 = { \bool_if_p:n {#2} }
+  }
 \cs_generate_variant:Nn \bool_set:Nn  { c }
 \cs_generate_variant:Nn \bool_gset:Nn { c }
 %    \end{macrocode}
