Speed up some conditionals by making them use an l3prg optimization
Conditionals that end with \prg_return_true: \else: \prg_return_false: \fi:
are optimized, so I just made a few conditionals use that.

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1896,12 +1896,18 @@
 %   \TeX{} skips spaces when reading a non-delimited arguments. Thus,
 %   a \meta{token list} is blank if and only if \cs{use_none:n}
 %   \meta{token list} |?| is empty after one expansion.  The auxiliary
-%   \cs{@@_if_empty_return:o} is a fast emptyness test, converting its
+%   \cs{@@_if_empty_if:o} is a fast emptyness test, converting its
 %   argument to a string (after one expansion) and using the test
 %   \cs{if_meaning:w} \cs{q_nil} |...| \cs{q_nil}.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \tl_if_blank:n #1 { p , T , F , TF }
-  { \@@_if_empty_return:o { \use_none:n #1 ? } }
+  {
+    \@@_if_empty_if:o { \use_none:n #1 ? }
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
+  }
 \prg_generate_conditional_variant:Nnn \tl_if_blank:n
   { V , o } { p , T , F , TF }
 %    \end{macrocode}
@@ -1954,26 +1960,31 @@
 % \end{macro}
 %
 % \begin{macro}[pTF,documented-as=\tl_if_empty:nTF]{\tl_if_empty:o}
-% \begin{macro}[EXP]{\@@_if_empty_return:o}
-%   The auxiliary function \cs{@@_if_empty_return:o} is for use
+% \begin{macro}[EXP]{\@@_if_empty_if:o}
+%   The auxiliary function \cs{@@_if_empty_if:o} is for use
 %   in various token list conditionals which reduce to testing
 %   if a given token list is empty after applying a simple function
 %   to it.
 %   The test for emptiness is based on \cs{tl_if_empty:nTF}, but
 %   the expansion is hard-coded for efficiency, as this auxiliary
-%   function is used in many places.
+%   function is used in several places.
+%   We don't put \cs{prg_return_true:} and so on in the definition of
+%   the auxiliary, because that would prevent an optimization applied to
+%   conditionals that end with this code.
 %    \begin{macrocode}
-\cs_new:Npn \@@_if_empty_return:o #1
+\cs_new:Npn \@@_if_empty_if:o #1
   {
     \exp_after:wN \if_meaning:w \exp_after:wN \q_nil
       \__kernel_tl_to_str:w \exp_after:wN {#1} \q_nil
+  }
+\prg_new_conditional:Npnn \tl_if_empty:o #1 { p , TF , T , F }
+  {
+    \@@_if_empty_if:o {#1}
       \prg_return_true:
     \else:
       \prg_return_false:
     \fi:
-  }
-\prg_new_conditional:Npnn \tl_if_empty:o #1 { p , TF , T , F }
-  { \@@_if_empty_return:o {#1} }
+ }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
