--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2932,12 +2932,16 @@
 \prg_new_conditional:Npnn \tl_if_single_token:n #1 { p , T , F , TF }
   {
     \tl_if_head_is_N_type:nTF {#1}
-      { \@@_if_empty_return:o { \use_none:n #1 } }
+      { \@@_if_empty_if:o { \use_none:n #1 } }
       {
         \tl_if_empty:nTF {#1}
-          { \prg_return_false: }
-          { \@@_if_empty_return:o { \exp:w \exp_end_continue_f:w #1 } }
+          { \if_false: }
+          { \@@_if_empty_if:o { \exp:w \exp_end_continue_f:w #1 } }
       }
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
   }
 %    \end{macrocode}
 % \end{macro}
