--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -591,6 +591,18 @@
 %   the result of evaluating the \meta{boolexpr}.
 % \end{function}
 %
+% \begin{function}[added = 2018-05-10]
+%   {
+%     \bool_set_inverse:N , \bool_set_inverse:c ,
+%     \bool_gset_inverse:N, \bool_gset_inverse:c
+%   }
+%   \begin{syntax}
+%     \cs{bool_set_inverse:N} \meta{boolean}
+%   \end{syntax}
+%   Toggles the \meta{boolean} from \texttt{true} to \texttt{false} and
+%   conversely: sets it to the inverse of its current value.
+% \end{function}
+%
 % \section{Additions to \pkg{l3prop}}
 %
 % \begin{function}[EXP]{\prop_count:N, \prop_count:c}
@@ -2356,6 +2368,19 @@
     \tex_global:D \tex_chardef:D #1 = \bool_if_p:n {#2}
   }
 \cs_generate_variant:Nn \bool_const:Nn { c }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[added = 2018-05-10]
+%   {\bool_set_inverse:N, \bool_set_inverse:c, \bool_gset_inverse:N, \bool_gset_inverse:c}
+%   Set to \texttt{false} or \texttt{true} locally or globally.
+%    \begin{macrocode}
+\cs_new_protected:Npn \bool_set_inverse:N #1
+  { \bool_if:NTF #1 { \bool_set_false:N } { \bool_set_true:N } #1 }
+\cs_generate_variant:Nn \bool_set_inverse:N { c }
+\cs_new_protected:Npn \bool_gset_inverse:N #1
+  { \bool_if:NTF #1 { \bool_gset_false:N } { \bool_gset_true:N } #1 }
+\cs_generate_variant:Nn \bool_gset_inverse:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
