--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -4214,7 +4214,11 @@
       \cs_set_protected:Npn \@@_tmp:w #1#2
         {
           \tl_const:Nx #1
-            { \char_generate:nn {"#2} { \char_value_catcode:n {"#2} } }
+            {
+              \exp_after:wN \exp_after:wN \exp_after:wN
+               \exp_not:N \char_generate:nn
+                 {"#2} { \char_value_catcode:n {"#2} }
+            }
         }
     }
     {
