Dcoumentation update [ci skip]

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1415,7 +1415,7 @@
 %   \emph{etc.})
 % \end{function}
 %
-% \begin{function}[added = 2018-04-02]{\char_codepoint_to_bytes:n}
+% \begin{function}[added = 2018-04-02, rEXP]{\char_codepoint_to_bytes:n}
 %   \begin{syntax}
 %     \cs{char_codepoint_to_bytes:n} \Arg{codepoint}
 %   \end{syntax}
@@ -3188,10 +3188,10 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\char_codepoint_to_bytes:n}
-% \begin{macro}[EXP]{\@@_codepoint_to_bytes_auxi:n}
-% \begin{macro}[EXP]{\@@_codepoint_to_bytes_auxii:Nnn}
-% \begin{macro}[EXP]{\@@_codepoint_to_bytes_auxiii:n}
+% \begin{macro}[rEXP]{\char_codepoint_to_bytes:n}
+% \begin{macro}[rEXP]{\@@_codepoint_to_bytes_auxi:n}
+% \begin{macro}[rEXP]{\@@_codepoint_to_bytes_auxii:Nnn}
+% \begin{macro}[rEXP]{\@@_codepoint_to_bytes_auxiii:n}
 %   This code converts a codepoint into the correct UTF-8 representation.
 %   As there are a variable number of octets, the result starts with the
 %   numeral |1|--|4| to indicate the nature of the returned value.
