--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -939,6 +939,20 @@
 %   (\emph{i.e.}~an \texttt{N} argument).
 % \end{function}
 %
+% \begin{function}[EXP, added = 2018-06-18]{\use:e}
+%   \begin{syntax}
+%     \cs{use:e} \Arg{expandable tokens}
+%   \end{syntax}
+%   Fully expands the \meta{token list} in an \texttt{x}-type manner,
+%   \emph{but} the function remains fully expandable, and parameter
+%   character (usually~|#|) need not be doubled.
+%   \begin{texnote}
+%     \cs{use:e} the a wrapper around the primitive \tn{expanded}
+%     where it is available:
+%     it requires two expansions to complete its action.
+%   \end{texnote}
+% \end{function}
+%
 % \begin{function}[updated = 2011-12-31]{\use:x}
 %   \begin{syntax}
 %     \cs{use:x} \Arg{expandable tokens}
@@ -1454,11 +1468,13 @@
 %<@@=use>
 %    \end{macrocode}
 %
-% \begin{macro}[EXP]{\use_x:n}
-%   A candidate, but needed early as it links to string comparisons.
-%   Currently \LuaTeX-only.
+% \begin{macro}[EXP]{\use:e}
+%   Currently \LuaTeX-only: emulated for older engines.
 %    \begin{macrocode}
-\cs_set:Npn \use_x:n #1 { \tex_expanded:D {#1} }
+\cs_set:Npn \use:e #1 { \tex_expanded:D {#1} }
+\tex_ifdefined:D \tex_expanded:D \tex_else:D
+  \cs_set:Npn \use:e #1 { \exp_args:Ne \use:n {#1} }
+\tex_fi:D
 %    \end{macrocode}
 % \end{macro}
 %
