--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1062,7 +1062,7 @@
      \cs_new:Npn \@@_escape_x:n #1
        {
          \lua_escape_x:n
-           { \__kernel_tl_to_str:w \use_x:n { {#1} } }
+           { \__kernel_tl_to_str:w \use:e { {#1} } }
        }
    }
 %    \end{macrocode}
