Rename expandable \lua_<thing>_x:n to \lua_<thing>:e
The non-expandable \lua_shipout_x:n still to do: need to check on exact details!

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2151,10 +2151,10 @@
         \file_get_full_name:nN {#1} \l_@@_full_name_str
         \str_set:Nx #3
           {
-            \lua_now_x:n
+            \lua_now:e
               {
                 l3kernel.file#2
-                  ( " \lua_escape_x:n { \l_@@_full_name_str } " )
+                  ( " \lua_escape:e { \l_@@_full_name_str } " )
               }
           }
        }
@@ -2896,8 +2896,8 @@
   {
     \cs_new_protected:Npn \sys_shell_now:n #1
       {
-        \lua_now_x:n
-          { os.execute(" \lua_escape_x:n { \tl_to_str:n {#1} } ") }
+        \lua_now:e
+          { os.execute(" \lua_escape:e { \tl_to_str:n {#1} } ") }
       }
   }
   {
