--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -255,7 +255,7 @@
     \tex_everyjob:D \exp_after:wN
       {
         \tex_the:D \tex_everyjob:D
-        \lua_now_x:n { require("l3format.lua") }
+        \lua_now:n { require("l3format.lua") }
       }
   }
 \use:x
