--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -189,7 +189,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%<@@=luatex>
+%<@@=lua>
 %    \end{macrocode}
 %
 % \begin{macro}[EXP]{\@@_escape:n, \@@_now:n, \@@_shipout_x:n}
